src/components/navigation/sidebar.scss
.sidebar {
  margin-top: 18px;
}
.sidebar .nav-item a > p {
  font-size: 14px;
  font-family: 'Segoe UI', sans-serif;
}
.bb-sidebar-nav {
  margin-top: 1.2rem !important;
}
.bb-nav-link {
  // margin-bottom: 0;
}
.sidebar .nav-item a > p > i.right {
  margin-top: 3px;
}

.nav-sidebar > .nav-item > .nav-link p {
  margin-left: 6px !important;
}

[class*="sidebar-dark-"] .nav-sidebar > .nav-item:hover > .nav-link,
[class*="sidebar-dark-"] .nav-sidebar > .nav-item > .nav-link:focus {
  background-color: transparent;
}

[class*="sidebar-dark-"] .nav-treeview > .nav-item > .nav-link:hover,
[class*="sidebar-dark-"] .nav-treeview > .nav-item > .nav-link:focus {
  background-color: transparent;
  color: #fbc301;
}

[class*="sidebar-dark-"] .sidebar a {
  color: #ffffff;
  font-weight: bold;
}

[class*="sidebar-dark-"] .nav-sidebar > .nav-item.menu-open > .nav-link {
  background-color: #fbc301;
}

.main-sidebar{
  background-color: rgb(2, 127, 113);
}
.extranet-sidebar{
  background-color: #31394D !important;
}
.main-sidebar:hover {
  opacity: 0.9;
}

@media (min-width: 992px) {
  .sidebar-mini.sidebar-collapse .main-sidebar:hover, .sidebar-mini.sidebar-collapse .main-sidebar.sidebar-focused {
      width: 250px;
  }
}
.nav-sidebar .menu-open > .nav-link i.right, .nav-sidebar .menu-is-opening > .nav-link i.right {
  transform: none;
}
.nav-sidebar .nav-item > .nav-link {
  padding: 0.4rem 1rem;
}
.nav-treeview .nav-item {
  width: calc(250px - 0.5rem * 2);
}
.sidebar-collapse.sidebar-mini .main-sidebar.sidebar-focused .nav-link, 
.sidebar-collapse.sidebar-mini .main-sidebar:hover .nav-link, 
.sidebar-collapse.sidebar-mini-md .main-sidebar.sidebar-focused .nav-link, 
.sidebar-collapse.sidebar-mini-md .main-sidebar:hover .nav-link, 
.sidebar-collapse.sidebar-mini-xs .main-sidebar.sidebar-focused .nav-link, 
.sidebar-collapse.sidebar-mini-xs .main-sidebar:hover .nav-link {
  width: calc(250px - 0.5rem * 2);
}
.sidebar-mini .main-sidebar .nav-link {
// width: auto !important;
}
.nav-treeview > .nav-item {
  padding-left: 26px !important;
}
[class*="sidebar-dark-"] .nav-treeview > .nav-item > .nav-link {
  color: #ffffff;
}
.nav-sidebar .nav-link > .right {
  right: 0.3rem !important;
}

.ic-right {
  display: none;
}

.sidebar-collapse.sidebar-mini .main-sidebar.sidebar-focused .nav-link .ic-right, 
.sidebar-collapse.sidebar-mini .main-sidebar:hover .nav-link .ic-right, 
.sidebar-collapse.sidebar-mini-md .main-sidebar.sidebar-focused .nav-link .ic-right, 
.sidebar-collapse.sidebar-mini-md .main-sidebar:hover .nav-link .ic-right, 
.sidebar-collapse.sidebar-mini-xs .main-sidebar.sidebar-focused .nav-link .ic-right, 
.sidebar-collapse.sidebar-mini-xs .main-sidebar:hover .nav-link .ic-right {
  display: inline;
}

